# Racanus

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  ruff.toml
applications/racanus_models/message/: api.py  objects.py  tables.py
applications/racanus_models/user/: api.py  enums.py  objects.py  tables.py
resources/templates/: layout.jinja2
resources/templates/pages/: home.jinja2
src/: __main__.py
src/racanus/: constants.py
src/racanus/core/: application.py  settings.py
