[project]
name = "racanus"
version = "2025.1.0"
description = "A chat website for Racan."

requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.115.12",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "ruff>=0.11.13",
    "ty>=0.0.1a6",
]

[tool.taskipy.tasks]
lint = {cmd = "ruff check && ty check", help = "Lint, Format & Type Check the project."}
